# TER

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  xmake.lua
benchmark/: benchmark.cpp  benchmark_reporter.cpp  main.cpp  util.hpp
include/: eblas.hpp  kernels.hpp
include/gemm/: gemm.hpp
include/gemm/detail/: kernels.hpp  kernels_1xx.hpp  kernels_2xx.hpp  kernels_4xx.hpp  kernels_8xx.hpp
misc/: benchmark.md
test/: CMakeLists.txt  benchmark.cpp  benchmark_reporter.cpp  kernels.cpp  main.cpp  nanobench.cpp  special_cases.cpp  square.cpp  util.cpp  util.hpp  various_dimensions.cpp
